# DLVM

./: .gitignore  CMakeLists.txt
doc/: vision.md
src/core/: CMakeLists.txt  dtype.hpp  shape.hpp  tensor.cpp  tensor.hpp
tests/: CMakeLists.txt  core_tests.cpp
